--- a/src/app.css
+++ b/src/app.css
@@ -14,11 +14,17 @@ body {
   padding: 1rem;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 h1 {
   font-size: 2rem;
-  margin: 1rem 0;
+  margin: 0;
 }
 
 p {
-  margin: 1rem 0;
+  margin: 0;
 }
