--- a/src/app.css
+++ b/src/app.css
@@ -3,13 +3,16 @@
   padding: 0;
 }
 
+:root {
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
 html {
   color: white;
 }
 
 body {
-  font-family: sans-serif;
-  font-size: 16px;
   background-color: rgb(25, 25, 25);
   padding: 1rem;
 }
